deployment1.yml
kind: Deployment
apiVersion: apps/v1
metadata: 
  name: nginx-deploment
  namespace: demo
spec:
  replicas: 2
  selector: 
    matchLabels:
      app: nginx


  template: 
    metadata:
      labels: 
        app: nginx

    spec:
      containers: 
      - name: nginx
        image: nginx:latest
        ports: 
        - containerPort: 80
