pod.yml
kind: Pod
apiVersion: v1
metadata:
  name: nginx-pod
  namespace: demo
spec: 
  containers:
  - name: nginx
    image: nginx:latest
    ports:
    - containerPort: 80   
  tolerator:    # if any node is taint
    - key: "prod"
      operator: "Equal"
      value: "true"
      effect: "NoSchedule"
