service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: demo 
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80 #website/service/project ka port
  type: ClusterIP
